--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-react-native": "^0.548.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-svg": "15.12.1"
   },
   "devDependencies": {
