fix input placeholder and setting android build settings

--- a/app.json
+++ b/app.json
@@ -21,10 +21,16 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.kartiaga.comprar"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "26b4c559-e1a0-4117-811c-b248bcbf7f53"
+      }
     }
   }
 }
